--- a/doml-web/Cargo.toml
+++ b/doml-web/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+doml = { path = "../" }
 unicase = "2"
 phf = { version = "0.8", features = ["unicase"] }
 phf_shared = { version = "0.8", features = ["unicase"] }
