refactor: more work on classes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["Audun Halland <audun.halland@gmail.com>"]
 edition = "2018"
 
+[dependencies]
+downcast-rs = "1"
+
 [workspace]
 members = ["doml-web"]
