refactor: revert to one package, use dyn_symbol instead

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2018"
 
 [dependencies]
 downcast-rs = "1"
+dyn-symbol = { git = "https://github.com/audunhalland/dyn-symbol.git", branch = "main" }
+unicase = "2"
+phf = { version = "0.8", features = ["unicase"] }
+phf_shared = { version = "0.8", features = ["unicase"] }
 
-[workspace]
-members = ["doml-web"]
+[build-dependencies]
+unicase = "2"
+phf_codegen = { version = "0.8" }
+phf_shared = { version = "0.8", features = ["unicase"] }
